# AuroraML

./: .gitignore  ALGORITHM_COMPARISON.md  CMakeLists.txt  LICENSE  PROJECT_STATUS.md  README.md  TEST_TIMEOUT_POLICY.md  build.sh  pyproject.toml
.github/workflows/: ci.yml
auroraml/: __init__.py
benchmarks/: benchmark.py  benchmark_comprehensive.py  benchmark_openmp.py  benchmark_timeout.py
docs/: ALGORITHM_COMPARISON.md  ALGORITHM_MATRIX.md  ALGORITHM_TABLE.md  IMMEDIATE_ACTION_PLAN.md  IMPLEMENTATION_PRIORITY_LIST.md  IMPLEMENTATION_ROADMAP.md  NEURAL_NETWORK_IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  ONECLASSSVM_IMPLEMENTATION_SUMMARY.md  README_OLD.md  STATUS_TODAY.md  TEST_COVERAGE.md  TEST_TIMEOUT_POLICY.md
examples/: neural_network_demo.py  one_class_svm_demo.py  one_class_svm_demo_simple.py
include/auroraml/: adaboost.hpp  agglomerative.hpp  base.hpp  calibration.hpp  catboost.hpp  cluster_extended.hpp  compose.hpp  covariance.hpp  dbscan.hpp  decomposition_extended.hpp  discriminant_analysis.hpp  dummy.hpp  ensemble_wrappers.hpp  extratree.hpp  feature_selection.hpp  gradient_boosting.hpp  impute.hpp  inspection.hpp  isotonic.hpp  kmeans.hpp  lda.hpp  linear_model.hpp  meta_estimators.hpp  metrics.hpp  mixture.hpp  model_selection.hpp  naive_bayes.hpp  naive_bayes_variants.hpp  neighbors.hpp  neural_network.hpp  outlier_detection.hpp  pca.hpp  pipeline.hpp  preprocessing.hpp  preprocessing_extended.hpp  random.hpp  random_forest.hpp  semi_supervised.hpp  svm.hpp  tree.hpp  (+3 more)
include/ingenuityml/: adaboost.hpp  agglomerative.hpp  base.hpp  calibration.hpp  catboost.hpp  cluster_extended.hpp  compose.hpp  covariance.hpp  cross_decomposition.hpp  dbscan.hpp  decomposition_extended.hpp  density_estimation.hpp  discriminant_analysis.hpp  dummy.hpp  ensemble_wrappers.hpp  extra_trees.hpp  extratree.hpp  feature_selection.hpp  gaussian_process.hpp  gradient_boosting.hpp  impute.hpp  inspection.hpp  isotonic.hpp  kmeans.hpp  lda.hpp  linear_model.hpp  manifold.hpp  meta_estimators.hpp  (+22 more)
ingenuityml/: __init__.py
python/: auroraml_bindings.cpp  ingenuityml_bindings.cpp
src/: adaboost.cpp  agglomerative.cpp  base.cpp  calibration.cpp  catboost.cpp  cluster_extended.cpp  compose.cpp  covariance.cpp  cross_decomposition.cpp  dbscan.cpp  decomposition_extended.cpp  density_estimation.cpp  discriminant_analysis.cpp  dummy.cpp  ensemble_wrappers.cpp  extra_trees.cpp  extratree.cpp  feature_selection.cpp  gaussian_process.cpp  gradient_boosting.cpp  impute.cpp  inspection.cpp  isotonic.cpp  kmeans.cpp  lda.cpp  linear_model.cpp  linear_model_extended.cpp  manifold.cpp  meta_estimators.cpp  metrics.cpp  mixture.cpp  model_selection.cpp  naive_bayes.cpp  naive_bayes_variants.cpp  neighbors.cpp  neural_network.cpp  outlier_detection.cpp  pca.cpp  pipeline.cpp  preprocessing.cpp  (+10 more)
tests/: CMakeLists.txt  test_adaboost.cpp  test_catboost.cpp  test_cluster.cpp  test_decomposition.cpp  test_ensemble.cpp  test_gradient_boosting.cpp  test_kmeans.cpp  test_linear_models.cpp  test_metrics.cpp  test_model_selection.cpp  test_naive_bayes.cpp  test_neighbors.cpp  test_pca.cpp  test_preprocessing.cpp  test_svm.cpp  test_tree.cpp  test_xgboost.cpp
tests/calibration/: test_calibration.cpp  test_isotonic.cpp
tests/cluster/: test_agglomerative_clustering.cpp  test_dbscan.cpp  test_kmeans.cpp
tests/covariance/: test_covariance.cpp
tests/decomposition/: test_decomposition.cpp  test_decomposition_extended.cpp  test_pca.cpp  test_truncated_svd.cpp
tests/discriminant_analysis/: test_discriminant_analysis.cpp  test_lda.cpp
tests/dummy/: test_dummy_classifier.cpp  test_dummy_regressor.cpp
tests/ensemble/: test_adaboost_classifier.cpp  test_adaboost_regressor.cpp  test_catboost.cpp  test_gradient_boosting_classifier.cpp  test_gradient_boosting_regressor.cpp  test_random_forest_classifier.cpp  test_random_forest_regressor.cpp  test_xgboost.cpp
tests/inspection/: test_inspection.cpp
tests/linear_model/: test_elasticnet.cpp  test_lasso.cpp  test_linear_model_classifiers_cv.cpp  test_linear_model_glm.cpp  test_linear_model_multitask.cpp  test_linear_model_online.cpp  test_linear_model_robust.cpp  test_linear_model_sparse.cpp  test_linear_regression.cpp  test_logistic_regression.cpp  test_logistic_regression_cv.cpp  test_ridge.cpp
tests/meta/: test_meta_estimators.cpp
tests/metrics/: test_metrics.cpp
tests/mixture/: test_mixture.cpp
tests/model_selection/: test_model_selection.cpp
tests/naive_bayes/: test_naive_bayes.cpp  test_naive_bayes_variants.cpp
tests/neighbors/: test_kneighbors_classifier.cpp  test_kneighbors_regressor.cpp  test_nearest_centroid.cpp  test_nearest_neighbors.cpp  test_neighbors_transformer.cpp  test_radiusneighborsclassifier.cpp  test_radiusneighborsregressor.cpp
tests/outlier/: test_outlier_detection.cpp
tests/pipeline/: test_compose.cpp  test_pipeline.cpp
tests/preprocessing/: test_feature_selection.cpp  test_impute.cpp  test_preprocessing.cpp  test_preprocessing_extended.cpp
tests/semi_supervised/: test_semi_supervised.cpp
tests/svm/: test_svm.cpp  test_svr.cpp
tests/tree/: test_decision_tree_classifier.cpp  test_decision_tree_regressor.cpp
tests/utils/: test_random.cpp  test_utils.cpp
tests_python/: __init__.py  auroraml  ingenuityml  run_all_tests.py  test_adaboost.py  test_basic.py  test_calibration.py  test_catboost_large_time.py  test_cluster_extended.py  test_clustering.py  test_compose.py  test_comprehensive.py  test_decomposition.py  test_discriminant_analysis.py  test_ensemble.py  test_ensemble_wrappers.py  test_extratree.py  test_feature_selection.py  test_impute.py  test_inspection.py  test_isotonic.py  test_isotonic_large_time.py  test_linear_models.py  test_metrics.py  test_mixture.py  test_model_selection.py  test_naive_bayes.py  test_naive_bayes_variants.py  test_neighbors.py  test_outlier_detection.py  test_pipeline.py  test_preprocessing.py  test_preprocessing_extended.py  test_random.py  test_runner.py  test_runner_optimized.py  test_runner_shuffled.py  test_runner_with_timeout.py  test_semi_supervised.py  test_svm.py  (+3 more)
(+82 files in other folders)
