[build-system]
requires = ["pybind11", "setuptools", "wheel", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name = "auroraml"
version = "0.1.0"
description = "High-performance C++ machine learning library with Python bindings"
authors = [{name = "AuroraML Team"}]
license = {text = "Creative Commons Attribution-ShareAlike 4.0 International"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["auroraml"]

[tool.setuptools.package-data]
auroraml = ["*.so", "*.dll", "*.dylib"]
